Move ldap, speed up blogs, change import profiles